# ibex-code

./: LICENSE  README.md  install.md  install.sh
GM/: auction_enc.hpp  auction_enc_test.cpp  gm_test.cpp
SealPIR/: analysis.py  micro_multi_test.cpp  net_client.cpp  net_server.cpp  pir_servers.cpp  pir_servers.hpp  run-micro.sh  run-pir-servers-multi.sh  run-pir-servers.sh
SealPIR/src/: CMakeLists.txt
aggregation/aggregation-micro/: CMakeLists.txt  README.md
aggregation/aggregator/: he.hpp
aggregation/throughput/: README.md  server.py  workload-gen.py
aggregation/throughput-wrk/: README.md  g14.lua  g15.lua  g16.lua
aggregation/throughput-wrk/static/: index.html
aggregator/: README.md
auction/: CMakeLists.txt
baselines/2pc/: CMakeLists.txt  README.md  hist.cpp  install.sh  run.sh
baselines/auction/: auction.cpp  client.cpp
bidding/GM/: CMakeLists.txt
bidding/SealPIR/: CMakeLists.txt  micro_test.cpp  net.hpp  net_client.hpp
bidding/SealPIR/src/: main.cpp  pir_client.hpp
bidding/auction/: auction.cpp  auctioneer.cpp
bidding/baselines/auction/: CMakeLists.txt  ips.txt  net.hpp
bidding/e2e-client/: CMakeLists.txt  client_multi.cpp  run-auction-servers.sh  run-pir-servers.sh  run-remote-servers.sh  stop-auction-servers.sh  stop-pir-servers.sh
bidding/end-to-end/: README.md
bidding/end-to-end/ibex/: CMakeLists.txt
bidding/end-to-end/ibex-bidding/: CMakeLists.txt  bidder.cpp  client.cpp  ips.txt
bidding/end-to-end/ibex-bidding/auctioneer/: CMakeLists.txt
bidding/end-to-end/ibex-bidding/scripts/: run-auction-servers.sh  run-bidders.sh  run-pir-servers.sh  stop-auction-servers.sh  stop-remote-servers.sh
bidding/end-to-end/non-private/: CMakeLists.txt  auctioneer.cpp  bidder.cpp  client.cpp  ips.txt  start-bidders.sh
bidding/libs/GM/: auction_enc.hpp  gm.hpp  key_gen.cpp
bidding/libs/SealPIR/: common.h  net.hpp  net_server.hpp
bidding/libs/SealPIR/src/: pir_server.cpp  pir_server.hpp
bidding/microbench/: README.md
bidding/microbench/PIR/: CMakeLists.txt  micro_test.cpp  pir_micro.cpp
bidding/microbench/auction/: CMakeLists.txt
bidding/microbench/bidding-share/: CMakeLists.txt  bidding_share.cpp
committee/: Dockerfile  EC2.md  README.md  dec_input_gen.py  ec2_benchmark.sh  install.sh
committee/config/: decrypt.sh
committee/inputs/: decrypt_input.txt
committee/source/: dec_test.mpc  fhe_test.mpc  lwe.mpc  secret_keygen.mpc
crypto/: CMakeLists.txt  add_noise_test.cpp  enc_afe_test.cpp  lwe.cpp  lwe_test.cpp  ring.cpp  ring_test.cpp  run-e2e.sh  run.sh  server.cpp  server_e2e.cpp  server_micro_test.cpp
crypto/scripts/: genP.py  genW.py  install.sh
e2e-client/: README.md  client.cpp  ips.txt  stop-remote-servers.sh
files/: pk  sk
paillier/: CMakeLists.txt  decryption.cpp  encryption.cpp  inner_product.cpp  key_generation.cpp  paillier.c  paillier.h  run.sh  tools.c  tools.h
plot/: e2e.py  throughput.py
seal/: CMakeLists.txt  aggregator.hpp  aggregator_micro_test.cpp  he_test.cpp
throughput/: CMakeLists.txt  browse_client.cpp  browse_server.cpp  client.hpp  conversion_client.cpp  conversion_server.cpp  net.hpp  server.hpp
throughput-wrk/: baseline.lua  server.py
